data/all_generated_tests/raw_wast_tests/block_StackCorruption_1959.wast
;; 10. **Excessive Instructions Without Stack Reset**: Develop a test where repetitive push and pop operations are performed without resetting the state of the stack, overwhelming the stack. Check if the block finalization handles the stack reset appropriately, preventing overflow.

(assert_invalid
  (module (func (result i32)
    (block (block (block (block (block (block (block (block (block (block 
    (i32.const 1) (i32.const 2) (i32.const 3) (drop) (drop) (drop)
    (i32.const 4) (i32.const 5) (i32.const 6) (drop) (drop) (drop)
    (i32.const 7) (i32.const 8) (i32.const 9) (drop) (drop) (drop)
    (i32.const 10) (i32.const 11) (i32.const 12) (drop) (drop) (drop)
    (i32.const 13) (i32.const 14) (i32.const 15) (drop) (drop) (drop)
    (i32.const 16) (i32.const 17) (i32.const 18) (drop) (drop) (drop)
    (i32.const 19) (i32.const 20) (i32.const 21) (drop) (drop) (drop)
    (i32.const 22) (i32.const 23) (i32.const 24) (drop) (drop) (drop)
    (i32.const 25) (i32.const 26) (i32.const 27) (drop) (drop) (drop)
    (i32.const 28) (i32.const 29) (i32.const 30) (drop) (drop) (drop)
    (i32.const 31) (i32.const 32) (i32.const 33) (drop) (drop) (drop)
    (i32.const 34) (i32.const 35) (i32.const 36) (drop) (drop) (drop)
    (i32.const 37) (i32.const 38) (i32.const 39) (drop) (drop) (drop)
    (i32.const 40) (i32.const 41) (i32.const 42) (drop) (drop) (drop)
    (i32.const 43) (i32.const 44) (i32.const 45) (drop) (drop) (drop)
    (i32.const 46) (i32.const 47) (i32.const 48) (drop) (drop) (drop)
    (i32.const 49) (i32.const 50) (i32.const 51) (drop) (drop) (drop)
    (i32.const 52) (i32.const 53) (i32.const 54) (drop) (drop) (drop)
    (i32.const 55) (i32.const 56) (i32.const 57) (drop) (drop) (drop)
    (i32.const 58) (i32.const 59) (i32.const 60) (drop) (drop) (drop)
    (i32.const 61) (i32.const 62) (i32.const 63) (drop) (drop) (drop)
    (i32.const 64) (i32.const 65) (i32.const 66) (drop) (drop) (drop)
    (i32.const 67) (i32.const 68) (i32.const 69) (drop) (drop) (drop)
    (i32.const 70) (i32.const 71) (i32.const 72) (drop) (drop) (drop)
    (i32.const 73) (i32.const 74) (i32.const 75) (drop) (drop) (drop)
    (i32.const 76) (i32.const 77) (i32.const 78) (drop) (drop) (drop)
    (i32.const 79) (i32.const 80) (i32.const 81) (drop) (drop) (drop)
    (i32.const 82) (i32.const 83) (i32.const 84) (drop) (drop) (drop)
    (i32.const 85) (i32.const 86) (i32.const 87) (drop) (drop) (drop)
    (i32.const 88) (i32.const 89) (i32.const 90) (drop) (drop) (drop)
    (i32.const 91) (i32.const 92) (i32.const 93) (drop) (drop) (drop)
    (i32.const 94) (i32.const 95) (i32.const 96) (drop) (drop) (drop)
    (i32.const 97) (i32.const 98) (i32.const 99) (drop) (drop) (drop)
    (i32.const 100) (i32.const 101) (i32.const 102) (drop) (drop) (drop)
    (i32.const 103) (i32.const 104) (i32.const 105) (drop) (drop) (drop)
    (i32.const 106) (i32.const 107) (i32.const 108) (drop) (drop) (drop)
    (i32.const 109) (i32.const 110) (i32.const 111) (drop) (drop) (drop)
    (i32.const 112) (i32.const 113) (i32.const 114) (drop) (drop) (drop)
    (i32.const 115) (i32.const 116) (i32.const 117) (drop) (drop) (drop)
    (i32.const 118) (i32.const 119) (i32.const 120) (drop) (drop) (drop)
    (i32.const 121) (i32.const 122) (i32.const 123) (drop) (drop) (drop)
    (i32.const 124) (i32.const 125) (i32.const 126) (drop) (drop) (drop)
    (i32.const 127) (i32.const 128) (i32.const 129) (drop) (drop) (drop)
    (i32.const 130) (i32.const 131) (i32.const 132) (drop) (drop) (drop)
    (i32.const 133) (i32.const 134) (i32.const 135) (drop) (drop) (drop)
    (i32.const 136) (i32.const 137) (i32.const 138) (drop) (drop) (drop)
    (i32.const 139) (i32.const 140) (i32.const 141) (drop) (drop) (drop)
    (i32.const 142) (i32.const 143) (i32.const 144) (drop) (drop) (drop)
    (i32.const 145) (i32.const 146) (i32.const 147) (drop) (drop) (drop)
    (i32.const 148) (i32.const 149) (i32.const 150) (drop) (drop) (drop)
    (i32.const 151) (i32.const 152) (i32.const 153) (drop) (drop) (drop)
    (i32.const 154) (i32.const 155) (i32.const 156) (drop) (drop) (drop)
    (i32.const 157) (i32.const 158) (i32.const 159) (drop) (drop) (drop)
    (i32.const 160) (i32.const 161) (i32.const 162) (drop) (drop) (drop)
    (i32.const 163) (i32.const 164) (i32.const 165) (drop) (drop) (drop)
    (i32.const 166) (i32.const 167) (i32.const 168) (drop) (drop) (drop)
    (i32.const 169) (i32.const 170) (i32.const 171) (drop) (drop) (drop)
    (i32.const 172) (i32.const 173) (i32.const 174) (drop) (drop) (drop)
    (i32.const 175) (i32.const 176) (i32.const 177) (drop) (drop) (drop)
    (i32.const 178) (i32.const 179) (i32.const 180) (drop) (drop) (drop)
    (i32.const 181) (i32.const 182) (i32.const 183) (drop) (drop) (drop)
    (i32.const 184) (i32.const 185) (i32.const 186) (drop) (drop) (drop)
    (i32.const 187) (i32.const 188) (i32.const 189) (drop) (drop) (drop)
    (i32.const 190) (i32.const 191) (i32.const 192) (drop) (drop) (drop)
    (i32.const 193) (i32.const 194) (i32.const 195) (drop) (drop) (drop)
    (i32.const 196) (i32.const 197) (i32.const 198) (drop) (drop) (drop)))
    )))
  ))
  "invalid block type"
)